# catfish-io

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docker-image.yml  tests.yml
catfishio/: main.py  router.py
catfishio/api/: router.py
catfishio/api/chat/: mappers.py  models.py  router.py
catfishio/api/chat/tests/: factories.py  test_mappers.py  test_models.py  test_router.py
catfishio/core/auth/: models.py  services.py
catfishio/core/auth/tests/: factories.py
catfishio/core/managers/: connection_manager.py
catfishio/web/: router.py
catfishio/web/templates/: index.html
